[workspace]
members = ["sentinel-core", "sentinel-cli"]
resolver = "2"

[workspace.dependencies]
reqwest = { version = "0.13" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["full"] }
